FIX wide sap.m.Table now have h-scrolling on small screens

--- a/Template/js/openui5.template.css
+++ b/Template/js/openui5.template.css
@@ -19,3 +19,6 @@ pre.sf-dump .sf-dump-private, pre.sf-dump .sf-dump-public, pre.sf-dump .sf-dump-
 .sapUiSizeCompact .exf-menu .sapMSLIIcon {height: 2rem}
 .sapUiSizeCompact .exf-menu .sapMSLIIcon .sapMSLIImgThumbIcon {height: 3rem; width: initial}
 .sapUiSizeCompact .exf-menu .sapMSLIIcon .sapMSLIImgThumbIcon:before {font-size: 16px}
+
+/* sap.m.Table */
+.sapMList.sapMListBGTranslucent.sapMListTblCnt {overflow-x: scroll}
